Add module access for unsafe