@@ -337,6 +337,7 @@ resolvers += Resolver.mavenLocal
 
 bashScriptExtraDefines += """
 addJava "--add-opens=java.base/javax.net.ssl=ALL-UNNAMED"
+addJava "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
 addJava "--add-opens=java.base/sun.net.www.protocol.file=ALL-UNNAMED"
 addJava "--add-exports=java.base/sun.security.x509=ALL-UNNAMED" 
 addJava "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED" 
@@ -351,6 +352,7 @@ reStart / javaOptions ++= Seq(
   "-Xms2g",
   "-Xmx8g",
   "--add-opens=java.base/javax.net.ssl=ALL-UNNAMED",
+  "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
   "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
   "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED",
   "-Dlog4j2.formatMsgNoLookups=true",
